sdk/lib/fdio/include/lib/fdio/fdio.h

__BEGIN_CDECLS
typedef struct fdio fdio_t;
zx_status_t fdio_create(zx_handle_t handle, fdio_t** out_io) ZX_AVAILABLE_SINCE(1);
fdio_t* fdio_default_create(void) ZX_AVAILABLE_SINCE(7);
fdio_t* fdio_null_create(void) ZX_AVAILABLE_SINCE(1);
typedef struct zxio_tag zxio_t;
zxio_t* fdio_get_zxio(fdio_t* io) ZX_AVAILABLE_SINCE(1);
int fdio_fd_create_null(void) ZX_AVAILABLE_SINCE(1);
int fdio_bind_to_fd(fdio_t* io, int fd, int starting_fd) ZX_AVAILABLE_SINCE(1);
zx_status_t fdio_unbind_from_fd(int fd, fdio_t** io_out) ZX_AVAILABLE_SINCE(1);
typedef struct zxio_storage zxio_storage_t;
fdio_t* fdio_zxio_create(zxio_storage_t** out_storage) ZX_AVAILABLE_SINCE(1);
size_t fdio_currently_allocated_fd_count(void) ZX_AVAILABLE_SINCE(12);